--- a/src/sass/newmain.css
+++ b/src/sass/newmain.css
@@ -1772,7 +1772,7 @@ a {
     font-size: 1.2em;
   }
   .Fourth-Story p:last-child {
-    font-size: 1.1em;
+    font-size: 0.8em;
   }
 }
 
@@ -2124,20 +2124,21 @@ a {
 
 .Fourth-DirectionDiv {
   display: flex;
-  height: 100vh;
+  height: 23vh;
+  align-self: auto;
   width: calc(120vh);
   max-width: 4000px;
   justify-content: center;
-  align-items: flex-end;
+  position: absolute;
+  bottom: 0;
 }
 
 @media (min-width: 0) {
   .Fourth-Direction {
     color: #FFE9DD;
     z-index: 5;
-    bottom: 0;
     font-size: 0.7em;
-    margin: 0 10% 5% 10%;
+    margin: 5% 10% 0 10%;
     font-weight: 700;
     text-align: center;
   }
@@ -2150,7 +2151,6 @@ a {
 @media (min-width: 1100px) {
   .Fourth-Direction {
     font-size: 1.1em;
-    margin: 0 10% 6% 10%;
   }
 }
 @media (min-width: 1442px) {
@@ -2161,7 +2161,6 @@ a {
 @media (min-width: 1900px) {
   .Fourth-Direction {
     font-size: 1.5em;
-    margin: 0 10% 8% 10%;
   }
 }
 
